--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">Gyro</string>
+    <string name="app_name">QuadControl</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="switch_on">Switch off Gyro</string>
+    <string name="switch_off">Switch on Gyro</string>
 </resources>
