--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="switch_on">Switch off Gyro</string>
-    <string name="switch_off">Switch on Gyro</string>
+    <string name="switch_on">Switch WiFi to Pi</string>
+    <string name="switch_off">Switch WiFi to router</string>
 </resources>
